HighContrast: fix focus
We don't want to render focus rectangles on everything. With
the way focus is propagated nowadays, the theme has to selectively
render focus on certain widgets.

At the same time, we always want to render focus for this
theme, so use the focus pseudoclass, not focus(visible).

Closes: https://gitlab.gnome.org/GNOME/gtk/issues/1815

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -16,7 +16,14 @@ $ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   outline-style: none;
 }
 
-*:focus(visible) {
+button:focus,
+checkbutton:focus,
+radiobutton:focus,
+switch:focus,
+scale:focus,
+label:focus,
+row:focus,
+flowboxchild:focus {
   // We use the outline properties to signal the focus properties
   // to the adwaita engine: using real CSS properties is faster,
   // and we don't use any outlines for now.
